k8s/deployment.yaml
#apiVersion: apps/v1
#kind: Deployment
#metadata:
#  name: devops
#  namespace: devops
#spec:
#  replicas: 3
#  selector:
#    matchLabels:
#      app: devops
#  template:
#    metadata:
#      labels:
#        app: devops
#    spec:
#      containers:
#      - name: devops-final-backend
#        image: andrijanaarsovska/devops-final-backend:latest
#        ports:
#        - containerPort: 8080
#        env:
#        - name: DB_USERNAME
#          valueFrom:
#            secretKeyRef:
#               name: db-secret
#               key: username
#        - name: DB_PASSWORD
#          valueFrom:
#            secretKeyRef:
#               name: db-secret
#               key: password
#        volumeMounts:
#          - name: config-volume
#            mountPath: /config
#            subPath: application.properties
#      volumes:
#      - name: config-volume
#        configMap:
#          name: app-config
#          items:
#           - key: application.properties
#             path: application.properties


apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: devops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: andrijanaarsovska/devops-final-backend:latest
          ports:
            - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: devops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: andrijanaarsovska/devops-final-frontend:latest
          ports:
            - containerPort: 80
