k8s/service.yaml
#apiVersion: v1
#kind: Service
#metadata:
#  name: devops-service
#  namespace: devops
#spec:
#  selector:
#    app: devops
#  ports:
#  - protocol: TCP
#    port: 80
#    targetPort: 8080
#  type: ClusterIP

apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: devops
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: devops
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
#apiVersion: v1
#kind: Service
#metadata:
#  name: postgres-service
#  namespace: devops
#spec:
#  selector:
#    app: postgres
#  ports:
#    - protocol: TCP
#      port: 5432
#      targetPort: 5432
