k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-ingress
  namespace: devops
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/sl-redirect: "false"
spec:
  rules:
    - host: myapp.local
      http:
          paths:
              - pathType: Prefix
                path: /backend
                backend:
                  service:
                    name: backend-service
                    port:
                      number: 80
              - pathType: Prefix
                path: /frontend
                backend:
                  service:
                    name: frontend-service
                    port:
                      number: 80
